<resources>
    <string name="app_name">Cashlawn</string>

    <string name="webview_ssl_hint">SSL certificate validation failed</string>
    <string name="webview_ssl_go">Go on</string>
    <string name="webview_ssl_cancel">Cancel</string>
    <string name="network_error">network_error</string>

    <string name="agreement_1">In order to perform credit risk assessment, the following data permissions is required with your permission:\n\nUser Personal Information\nOur app collects user account data which includes email address and user public profile information like name, gender, photo, national ID or voter ID. This information is required as a part of registration process to access our service and it\'s also used to auto-populate relevant fields in the course of the interface of our app.\nOur app also collects mobile number for verification to check the active SIM status on the device, uniquely identify you and prevent frauds and unauthorized access.\nOur app collects and monitors specific information about your device including your hardware model, build model, RAM, storage; unique device identifiers like IMEI,serial number,SSAID; SIM information includes network operator, roaming state,WIFI information includes MAC address and mobile network information to uniquely identify the devices and ensure that no unauthorized device act on your behalf to prevent frauds. This also helps us in assessing credit worthiness for credit profile enrichment.\nAll above data will be uploaded to https:\/\/ api.cashlawnob.com.  We will delete the all these data after we have determined your risk profile.</string>
    <string name="agreement_2">We collect all your SMS data, but we only monitor your messages related to financial transactions. To be specific, we will monitor the name of the sender, the description and the amount of the transaction to perform the credit risk assessment. This allows a faster disbursement of the loan.No personal SMS data is monitored,read,stored or shared.</string>
<!--    <string name="agreement_2_1">We collect all of your phone book contacts, including your phone contact name, phone number, contact added date, in order to increase your credit profile and enable you to quickly screen and select your references on your loan application. We will not share your contacts information under any circumstances, nor will we share it with third parties.</string>-->
    <string name="agreement_3">We collect each installed applications\' metadata information which includes the application name, package name, installed time, updated time, version name and version code of each installed application on your device to assess your credit worthiness and provide you with preapproved customized loan offers.</string>
    <string name="agreement_4">We collect and monitor the information about the location of your device to provide serviceability of your loan application, to reduce risk associated with your loan application and to provide pre-approved customized loan offers. This also helps us to verify the address, make a better credit risk decision and expedite your KYC process. </string>
    <string name="agreement_5">We require camera access so that you can easily scan, or capture required KYC documents and save time by allowing us to auto-fill relevant data. This ensures that you are provided with a seamless experience while using the application.</string>
    <string name="agreement_6">Our application has a link to a registered third party SDK which collects data on our behalf. Through SDK, SMS data, contacts installed application list, camera, location, phone status and storage data will be collected and transmitted to the third-party SDK for risk assessment. These data are stored to a secured server to perform a credit risk assessment. We ensure that our third-party service provider takes extensive security measures in order to protect your personal information against loss, misuse or alteration of the data.</string>
    <string name="agreement_7">We require storage permission so that your KYC and other relevant documents can be securely downloaded and saved on your phone. You can then easily upload the right KYC related documents for faster loan application details filling and disbursal process. This ensures that you are provided with a seamless experience while using the application.</string>
    <string name="agreement_8">We require the media, photos, and files permission that allows the App to enable you to upload photos or documents to complete the application form during your loan application journey. </string>
    <string name="agreement_2_21">When applying for a loan, we will use the call recording permission to obtain the contact phone number and call time, and verify the device by making a phone call to check the corresponding number in the call log to determine if you have received the call. It can improve the user\'s login experience and verify the authenticity of the user\'s identity. Simultaneously protecting account security and identifying fraud risks. The data will be uploaded to our server(https://api.cashlawnob.com).We will never share this data with other partners.</string>

</resources>