<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.AgreementActivity">
    <FrameLayout
        android:id="@+id/topFrame"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:minHeight="48dp"
        android:background="@color/common_title_bg"
        >
        <ImageView
            android:id="@+id/topBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back"
            android:paddingHorizontal="10dp"
            />

        <TextView
            android:id="@+id/topTitle"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:paddingHorizontal="20dp"
            android:text="Permission"
            android:textColor="#ff333333"
            android:textSize="18sp"/>
    </FrameLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff69800"
                android:textSize="12sp"
                android:text="@string/agreement_1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_sms"
                android:text="SMS"
                android:drawablePadding="6dp"
                android:textColor="#333333"
                android:layout_marginTop="11dp"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ff666666"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:text="@string/agreement_2"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_contacts"
                android:text="CONTACTS"
                android:drawablePadding="6dp"
                android:textColor="#333333"
                android:layout_marginTop="11dp"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ff666666"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:text="@string/agreement_2"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_installed"
                android:text="Installed Applications"
                android:drawablePadding="6dp"
                android:textColor="#333333"
                android:layout_marginTop="11dp"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ff666666"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:text="@string/agreement_3"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_location"
                android:text="Location"
                android:drawablePadding="6dp"
                android:textColor="#333333"
                android:layout_marginTop="11dp"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ff666666"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:text="@string/agreement_4"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_camera"
                android:text="Camera"
                android:drawablePadding="6dp"
                android:textColor="#333333"
                android:layout_marginTop="11dp"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ff666666"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:text="@string/agreement_5"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_link"
                android:text="LINK TO THIRD-PARTY SDK"
                android:drawablePadding="6dp"
                android:textColor="#333333"
                android:layout_marginTop="11dp"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ff666666"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:text="@string/agreement_6"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_storage"
                android:text="Storage"
                android:drawablePadding="6dp"
                android:textColor="#333333"
                android:layout_marginTop="11dp"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ff666666"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:text="@string/agreement_7"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_camera"
                android:text="MEDIA&amp;PHOTOS&amp;FILES"
                android:drawablePadding="6dp"
                android:textColor="#333333"
                android:layout_marginTop="11dp"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ff666666"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:text="@string/agreement_8"
                android:paddingBottom="20dp"
                />
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="23dp">
        <Button
            android:id="@+id/btUpgrade"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="36dp"
            android:background="@drawable/shape_button_upgrade"
            android:text="Agree"
            android:textColor="#ffffffff"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>